# rad

./: .gitignore  CMakeLists.txt  README.md
include/: rad.hpp
rad-py/: autodiff.py
src/: gradients.hpp  node.hpp  operations.hpp  operators.hpp
tests/: CMakeLists.txt  autodiff.cpp  node.cpp  test.cpp
